# secure-vibes-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  securevibes_plan.rtf
.claude/: settings.local.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/code_review_20260113/: metadata.json  plan.md  spec.md
conductor/tracks/mcp_foundation_20260111/: metadata.json  plan.md  spec.md
conductor/tracks/threat_modeling_20260113/: metadata.json  plan.md  spec.md
src/securevibes_mcp/: __init__.py  __main__.py  server.py
src/securevibes_mcp/agents/: __init__.py  artifact_readers.py  code_review_handler.py  component_filter.py  dast_handler.py  dast_output.py  dast_tester.py  dependency.py  generator.py  report_handler.py  report_output.py  scanner.py  security_parser.py  severity.py  stride_analyzer.py  suppression_reader.py  suppression_writer.py  threat_model_builder.py  threat_model_output.py  threat_model_reader.py  threat_modeling_handler.py  threat_templates.py  vulnerability_builder.py  vulnerability_patterns.py  vulnerability_reader.py  (+1 more)
tests/: conftest.py  test_artifact_readers.py  test_assessment.py  test_code_review_handler.py  test_component_filter.py  test_dast_handler.py  test_dast_output.py  test_dast_tester.py  test_dependency.py  test_e2e.py  test_generator.py  test_package.py  test_query_tools.py  test_report_handler.py  test_report_output.py  test_scanner.py  test_security_parser.py  test_server.py  test_severity.py  test_storage.py  test_stride_analyzer.py  test_suppression.py  test_threat_model_builder.py  test_threat_model_output.py  test_threat_model_reader.py  test_threat_modeling_handler.py  test_threat_templates.py  test_tools.py  test_vulnerability_builder.py  test_vulnerability_patterns.py  test_vulnerability_reader.py  test_vulnerability_scanner.py
(+6 files in other folders)
